--- a/app-crypt/johntheripper/ChangeLog
+++ b/app-crypt/johntheripper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/johntheripper
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.101 2009/10/08 21:57:35 rich0 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.102 2009/10/11 20:16:56 nixnut Exp $
+
+  11 Oct 2009; nixnut <nixnut@gentoo.org> johntheripper-1.7.3.1-r1.ebuild:
+  ppc stable #287932
 
   08 Oct 2009; Richard Freeman <rich0@gentoo.org>
   johntheripper-1.7.3.1-r1.ebuild:
