--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.187 2009/10/11 15:03:33 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.188 2009/10/11 23:43:50 jer Exp $
+
+  11 Oct 2009; Jeroen Roovers <jer@gentoo.org> wireshark-1.2.2.ebuild:
+  Stable for HPPA (bug #285280).
 
   11 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
   wireshark-1.2.2.ebuild:
