--- a/sys-kernel/git-sources/ChangeLog
+++ b/sys-kernel/git-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.655 2009/10/10 18:32:07 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.656 2009/10/12 11:50:31 mpagano Exp $
+
+*git-sources-2.6.32_rc4-r1 (12 Oct 2009)
+
+  12 Oct 2009; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.32_rc4-r1.ebuild:
+  Version bump
 
 *git-sources-2.6.32_rc3-r3 (10 Oct 2009)
 
