--- a/sci-geosciences/josm/ChangeLog
+++ b/sci-geosciences/josm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-geosciences/josm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.29 2009/10/06 13:18:14 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.30 2009/10/12 12:54:03 hanno Exp $
+
+*josm-2.255 (12 Oct 2009)
+
+  12 Oct 2009; Hanno Boeck <hanno@gentoo.org> +josm-2.255.ebuild:
+  Version bump.
 
 *josm-2.221 (06 Oct 2009)
 
