--- a/sci-geosciences/josm-plugins/ChangeLog
+++ b/sci-geosciences/josm-plugins/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-geosciences/josm-plugins
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/josm-plugins/ChangeLog,v 1.12 2009/07/19 17:06:03 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/josm-plugins/ChangeLog,v 1.13 2009/10/12 12:54:45 hanno Exp $
+
+*josm-plugins-20091011 (12 Oct 2009)
+
+  12 Oct 2009; Hanno Boeck <hanno@gentoo.org> +josm-plugins-20091011.ebuild:
+  Version bump.
 
 *josm-plugins-20090719 (19 Jul 2009)
 
