--- a/app-backup/backuppc/ChangeLog
+++ b/app-backup/backuppc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/backuppc
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/backuppc/ChangeLog,v 1.7 2008/07/24 21:12:04 rich0 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-backup/cvs-repo/gentoo-x86/app-backup/backuppc/ChangeLog,v 1.8 2009/10/12 17:17:02 halcy0n Exp $
+
+  12 Oct 2009; Mark Loeser <halcy0n@gentoo.org> backuppc-2.1.2-r1.ebuild:
+  QA fixes; unquoted variables
 
   24 Jul 2008; Richard Freeman <rich0@gentoo.org> backuppc-2.1.2-r1.ebuild:
   amd64 stable - 211671
