--- a/dev-cpp/libgnomecanvasmm/ChangeLog
+++ b/dev-cpp/libgnomecanvasmm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/libgnomecanvasmm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.69 2009/05/10 22:24:48 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-cpp/cvs-repo/gentoo-x86/dev-cpp/libgnomecanvasmm/ChangeLog,v 1.70 2009/10/12 20:34:18 eva Exp $
+
+  12 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org
+  -libgnomecanvasmm-2.23.1.ebuild:
+  Clean up old revisions.
 
 *libgnomecanvasmm-2.26.0 (10 May 2009)
 
