--- a/kde-base/oxygen-icons/ChangeLog
+++ b/kde-base/oxygen-icons/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/oxygen-icons
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/oxygen-icons/ChangeLog,v 1.10 2009/10/10 10:41:55 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/oxygen-icons/ChangeLog,v 1.11 2009/10/12 21:55:30 alexxy Exp $
+
+  12 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
+  oxygen-icons-4.3.2-r1.ebuild:
+  Add block for kmail 4.2.4
 
   10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   oxygen-icons-4.3.1.ebuild:
