--- a/media-sound/fapg/ChangeLog
+++ b/media-sound/fapg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/fapg
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/fapg/ChangeLog,v 1.28 2009/07/04 13:59:59 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/fapg/ChangeLog,v 1.29 2009/10/13 11:03:12 ssuominen Exp $
+
+  13 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> fapg-0.41.ebuild:
+  Revert back to ~ppc64 because this was stabled without it's dependencies.
 
   04 Jul 2009; Brent Baude <ranger@gentoo.org> fapg-0.41.ebuild:
   Marking fapg-0.41 ppc64 for bug 272818
