--- a/xfce-base/xfce4-settings/ChangeLog
+++ b/xfce-base/xfce4-settings/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-settings
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.21 2009/10/08 03:01:59 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.22 2009/10/13 15:28:43 darkside Exp $
+
+  13 Oct 2009; Jeremy Olexa <darkside@gentoo.org>
+  xfce4-settings-4.6.3.ebuild:
+  Gentoo Prefix cannot build xorg-server, exclude it from the deps
 
   08 Oct 2009; Olivier Crête <tester@gentoo.org>
   xfce4-settings-4.6.3.ebuild:
