--- a/games-board/spider/ChangeLog
+++ b/games-board/spider/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/spider
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/spider/ChangeLog,v 1.1 2009/02/16 19:39:25 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/spider/ChangeLog,v 1.2 2009/10/13 20:02:57 mr_bones_ Exp $
+
+  13 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org> spider-1.2_p4.ebuild:
+  /usr/bin/X11 went away (bug #273568)
 
 *spider-1.2_p4 (16 Feb 2009)
 
