--- a/app-crypt/gringotts/ChangeLog
+++ b/app-crypt/gringotts/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/gringotts
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gringotts/ChangeLog,v 1.33 2009/09/12 09:52:58 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gringotts/ChangeLog,v 1.34 2009/10/14 00:54:37 halcy0n Exp $
+
+  14 Oct 2009; Mark Loeser <halcy0n@gentoo.org> gringotts-1.2.9.ebuild:
+  QA fixes; remove redundant setting of WANT_AUTOCONF and WANT_AUTOMAKE to
+  latest
 
 *gringotts-1.2.10 (12 Sep 2009)
 
