--- a/app-crypt/onak/ChangeLog
+++ b/app-crypt/onak/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/onak
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/onak/ChangeLog,v 1.6 2009/06/27 17:13:54 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/onak/ChangeLog,v 1.7 2009/10/14 00:57:02 halcy0n Exp $
+
+  14 Oct 2009; Mark Loeser <halcy0n@gentoo.org> onak-0.3.3-r1.ebuild:
+  QA fixes; unquoted variables
 
 *onak-0.3.7 (27 Jun 2009)
 
