--- a/media-libs/schroedinger/ChangeLog
+++ b/media-libs/schroedinger/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/schroedinger
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/schroedinger/ChangeLog,v 1.35 2009/10/05 10:12:14 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/schroedinger/ChangeLog,v 1.36 2009/10/14 04:47:48 aballier Exp $
+
+*schroedinger-1.0.8 (14 Oct 2009)
+
+  14 Oct 2009; Alexis Ballier <aballier@gentoo.org>
+  +schroedinger-1.0.8.ebuild:
+  version bump
 
   05 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   schroedinger-1.0.7-r2.ebuild:
