--- a/games-board/biloba/ChangeLog
+++ b/games-board/biloba/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/biloba
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/biloba/ChangeLog,v 1.3 2009/01/04 02:05:32 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/biloba/ChangeLog,v 1.4 2009/10/14 15:53:13 mr_bones_ Exp $
+
+  14 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org> biloba-0.6.ebuild:
+  EAPI=2; update HOMEPAGE
 
 *biloba-0.6 (04 Jan 2009)
 
