--- a/net-irc/quassel/ChangeLog
+++ b/net-irc/quassel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/quassel
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/quassel/ChangeLog,v 1.63 2009/10/12 18:55:49 volkmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/quassel/ChangeLog,v 1.64 2009/10/14 21:21:42 patrick Exp $
+
+*quassel-0.5.0 (14 Oct 2009)
+
+  14 Oct 2009; Patrick Lauer <patrick@gentoo.org> +quassel-0.5.0.ebuild:
+  Bump to 0.5.0, makes upstream happy
 
   12 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> quassel-0.5_rc2.ebuild:
   Keywording for ppc, bug 272760
