--- a/x11-apps/xprop/ChangeLog
+++ b/x11-apps/xprop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xprop
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xprop/ChangeLog,v 1.43 2009/10/14 21:45:23 remi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xprop/ChangeLog,v 1.44 2009/10/14 21:50:28 remi Exp $
+
+  14 Oct 2009; Rémi Cardona <remi@gentoo.org> xprop-1.1.0.ebuild:
+  fix deps and indent
 
 *xprop-1.1.0 (14 Oct 2009)
 
