--- a/media-libs/openal/ChangeLog
+++ b/media-libs/openal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/openal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openal/ChangeLog,v 1.123 2009/09/27 17:03:52 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/openal/ChangeLog,v 1.124 2009/10/15 08:18:07 maekke Exp $
+
+  15 Oct 2009; Markus Meier <maekke@gentoo.org> openal-1.9.563.ebuild:
+  amd64/x86 stable, bug #287653
 
 *openal-1.9.563 (27 Sep 2009)
 
