--- a/dev-ruby/rspec/ChangeLog
+++ b/dev-ruby/rspec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.50 2009/10/06 05:34:01 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.51 2009/10/15 08:31:20 maekke Exp $
+
+  15 Oct 2009; Markus Meier <maekke@gentoo.org> rspec-1.2.8.ebuild:
+  amd64/x86 stable, bug #287849
 
 *rspec-1.2.9 (06 Oct 2009)
 
