--- a/dev-java/stax/ChangeLog
+++ b/dev-java/stax/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/stax
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/stax/ChangeLog,v 1.4 2009/03/20 19:51:14 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/stax/ChangeLog,v 1.5 2009/10/15 08:34:29 maekke Exp $
+
+  15 Oct 2009; Markus Meier <maekke@gentoo.org> stax-1.2.0.ebuild:
+  amd64/x86 stable, bug #287619
 
   20 Mar 2009; Joseph Jezak <josejx@gentoo.org> stax-1.2.0.ebuild:
   Marked ~ppc64.
