--- a/media-plugins/audacious-plugins/ChangeLog
+++ b/media-plugins/audacious-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.140 2009/10/14 21:55:35 chainsaw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.141 2009/10/15 10:17:12 ssuominen Exp $
+
+  15 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  audacious-plugins-1.5.1-r3.ebuild:
+  Remove libmpcdec support.
 
   14 Oct 2009; <chainsaw@gentoo.org>
   -files/2.0.1-icecast-flawed-vorbis-enum.patch,
