--- a/net-misc/wget/ChangeLog
+++ b/net-misc/wget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wget/ChangeLog,v 1.118 2009/10/14 01:26:56 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wget/ChangeLog,v 1.119 2009/10/15 15:30:47 volkmar Exp $
+
+  15 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> wget-1.12.ebuild:
+  Stabilizing for ppc, bug 286058
 
   14 Oct 2009; Mike Frysinger <vapier@gentoo.org>
   files/wget-1.12-debug-tests.patch:
