--- a/app-emacs/quack/ChangeLog
+++ b/app-emacs/quack/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/quack
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/quack/ChangeLog,v 1.14 2009/06/03 17:22:51 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/quack/ChangeLog,v 1.15 2009/10/15 19:07:48 ulm Exp $
+
+*quack-0.37 (15 Oct 2009)
+
+  15 Oct 2009; Ulrich Mueller <ulm@gentoo.org> -quack-0.30.ebuild,
+  +quack-0.37.ebuild:
+  Version bump. Remove old.
 
 *quack-0.36 (03 Jun 2009)
 
