--- a/media-video/h264enc/ChangeLog
+++ b/media-video/h264enc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/h264enc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/h264enc/ChangeLog,v 1.2 2009/08/18 15:58:10 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/h264enc/ChangeLog,v 1.3 2009/10/15 19:08:52 ssuominen Exp $
+
+*h264enc-9.0.6 (15 Oct 2009)
+
+  15 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +h264enc-9.0.6.ebuild:
+  Version bump wrt #286498, thanks to "Pun" for reporting.
 
 *h264enc-9.0.0 (18 Aug 2009)
 
