--- a/dev-ml/lwt/ChangeLog
+++ b/dev-ml/lwt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ml/lwt
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/lwt/ChangeLog,v 1.5 2009/10/16 11:41:47 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/lwt/ChangeLog,v 1.6 2009/10/16 11:44:24 aballier Exp $
+
+  16 Oct 2009; Alexis Ballier <aballier@gentoo.org> -lwt-1.1.0.ebuild,
+  -lwt-2.0.0_rc1.ebuild:
+  remove old
 
 *lwt-2.0.0 (16 Oct 2009)
 
