--- a/media-video/vlc/ChangeLog
+++ b/media-video/vlc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/vlc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.519 2009/10/16 12:20:16 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/vlc/ChangeLog,v 1.520 2009/10/16 12:32:16 aballier Exp $
+
+  16 Oct 2009; Alexis Ballier <aballier@gentoo.org> vlc-1.0.9999.ebuild:
+  remove patch merged upstream
 
   16 Oct 2009; Alexis Ballier <aballier@gentoo.org> vlc-9999.ebuild,
   metadata.xml:
