--- a/sys-power/cpudyn/ChangeLog
+++ b/sys-power/cpudyn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/cpudyn
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-power/cvs-repo/gentoo-x86/sys-power/cpudyn/ChangeLog,v 1.11 2009/06/12 14:05:52 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-power/cvs-repo/gentoo-x86/sys-power/cpudyn/ChangeLog,v 1.12 2009/10/16 20:03:50 bangert Exp $
+
+  16 Oct 2009; Thilo Bangert <bangert@gentoo.org> files/cpudyn.init:
+  fix bashism in init script (bug #195939)
 
   12 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org> cpudyn-1.0.1.ebuild:
   Fix prestripped files.
