--- a/gnome-base/libgnomekbd/ChangeLog
+++ b/gnome-base/libgnomekbd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnomekbd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.57 2009/10/08 03:03:02 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnomekbd/ChangeLog,v 1.58 2009/10/16 22:14:34 maekke Exp $
+
+  16 Oct 2009; Markus Meier <maekke@gentoo.org> libgnomekbd-2.26.0.ebuild:
+  x86 stable, bug #281427
 
   08 Oct 2009; Olivier Crête <tester@gentoo.org> libgnomekbd-2.26.0.ebuild:
   Stable on amd64, bug #281427
