--- a/gnome-base/gnome-keyring/ChangeLog
+++ b/gnome-base/gnome-keyring/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-keyring
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-keyring/ChangeLog,v 1.158 2009/10/08 03:09:27 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-keyring/ChangeLog,v 1.159 2009/10/16 22:42:22 maekke Exp $
+
+  16 Oct 2009; Markus Meier <maekke@gentoo.org> gnome-keyring-2.26.3.ebuild:
+  x86 stable, bug #281427
 
   08 Oct 2009; Olivier Crête <tester@gentoo.org>
   gnome-keyring-2.26.3.ebuild:
