--- a/dev-python/libbonobo-python/ChangeLog
+++ b/dev-python/libbonobo-python/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/libbonobo-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/libbonobo-python/ChangeLog,v 1.12 2009/10/10 17:27:57 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/libbonobo-python/ChangeLog,v 1.13 2009/10/16 23:23:19 maekke Exp $
+
+  16 Oct 2009; Markus Meier <maekke@gentoo.org>
+  libbonobo-python-2.26.1.ebuild:
+  x86 stable, bug #281427
 
   10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
   libbonobo-python-2.26.1.ebuild:
