--- a/gnome-extra/evolution-webcal/ChangeLog
+++ b/gnome-extra/evolution-webcal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/evolution-webcal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-webcal/ChangeLog,v 1.102 2009/10/08 03:20:59 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/evolution-webcal/ChangeLog,v 1.103 2009/10/16 23:38:13 maekke Exp $
+
+  16 Oct 2009; Markus Meier <maekke@gentoo.org>
+  evolution-webcal-2.26.0.ebuild:
+  x86 stable, bug #281427
 
   08 Oct 2009; Olivier Crête <tester@gentoo.org>
   evolution-webcal-2.26.0.ebuild:
