--- a/dev-python/gtksourceview-python/ChangeLog
+++ b/dev-python/gtksourceview-python/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/gtksourceview-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.20 2009/10/10 17:15:39 grobian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/gtksourceview-python/Attic/ChangeLog,v 1.21 2009/10/16 23:52:08 maekke Exp $
+
+  16 Oct 2009; Markus Meier <maekke@gentoo.org>
+  gtksourceview-python-2.26.0.ebuild:
+  x86 stable, bug #281427
 
   10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
   gtksourceview-python-2.26.0.ebuild:
