--- a/dev-libs/tre/ChangeLog
+++ b/dev-libs/tre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/tre
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tre/ChangeLog,v 1.40 2009/10/16 13:39:06 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tre/ChangeLog,v 1.41 2009/10/17 07:53:51 maekke Exp $
+
+  17 Oct 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
+  remove static-libs description as it is global now
 
 *tre-0.8.0 (16 Oct 2009)
 
