--- a/media-sound/mp3diags/ChangeLog
+++ b/media-sound/mp3diags/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/mp3diags
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3diags/ChangeLog,v 1.3 2009/10/01 21:42:57 ayoy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3diags/ChangeLog,v 1.4 2009/10/17 14:10:52 ayoy Exp $
+
+*mp3diags-0.99.06.041 (17 Oct 2009)
+
+  17 Oct 2009; Dominik Kapusta <ayoy@gentoo.org>
+  +mp3diags-0.99.06.041.ebuild:
+  Version bump
 
 *mp3diags-0.99.06.040 (01 Oct 2009)
 
