--- a/net-analyzer/httping/ChangeLog
+++ b/net-analyzer/httping/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/httping
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.48 2009/08/09 14:16:05 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.49 2009/10/18 06:37:18 pva Exp $
+
+*httping-1.3.1 (18 Oct 2009)
+
+  18 Oct 2009; Peter Volkov <pva@gentoo.org> -httping-1.2.2.ebuild,
+  -httping-1.2.4.ebuild, -httping-1.2.9.ebuild, +httping-1.3.1.ebuild:
+  Version bump. Drop old.
 
 *httping-1.2.9-r1 (09 Aug 2009)
 
