--- a/x11-misc/xclip/ChangeLog
+++ b/x11-misc/xclip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xclip
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xclip/ChangeLog,v 1.32 2009/10/03 13:32:03 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xclip/ChangeLog,v 1.33 2009/10/18 12:41:05 ssuominen Exp $
+
+  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> xclip-0.12.ebuild:
+  amd64 stable wrt #289200
 
 *xclip-0.12 (03 Oct 2009)
 
