--- a/x11-misc/xmbdfed/ChangeLog
+++ b/x11-misc/xmbdfed/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xmbdfed
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xmbdfed/Attic/ChangeLog,v 1.21 2009/07/18 22:19:52 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xmbdfed/Attic/ChangeLog,v 1.22 2009/10/18 13:36:42 ssuominen Exp $
+
+  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  xmbdfed-4.7_p1-r1.ebuild:
+  amd64 stable wrt #289341
 
   18 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
   xmbdfed-4.7_p1-r1.ebuild:
