--- a/media-video/kmplayer/ChangeLog
+++ b/media-video/kmplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/kmplayer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kmplayer/ChangeLog,v 1.128 2009/10/12 16:07:22 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kmplayer/ChangeLog,v 1.129 2009/10/18 13:43:56 ssuominen Exp $
+
+  18 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  kmplayer-0.10.0c.ebuild:
+  Revert back to ~amd64 wrt #288731
 
   12 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   kmplayer-0.11.1b.ebuild:
