--- a/net-misc/wget/ChangeLog
+++ b/net-misc/wget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wget/ChangeLog,v 1.119 2009/10/15 15:30:47 volkmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/wget/ChangeLog,v 1.120 2009/10/18 14:26:26 ranger Exp $
+
+  18 Oct 2009; Brent Baude <ranger@gentoo.org> wget-1.12.ebuild:
+  Marking wget-1.12 ppc64 for bug 286058
 
   15 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> wget-1.12.ebuild:
   Stabilizing for ppc, bug 286058
