--- a/net-libs/gupnp/ChangeLog
+++ b/net-libs/gupnp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gupnp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/gupnp/ChangeLog,v 1.11 2009/10/04 17:15:06 mrpouet Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/gupnp/ChangeLog,v 1.12 2009/10/18 15:22:00 klausman Exp $
+
+  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> gupnp-0.12.8.ebuild:
+  Keyworded on alpha, bug #282989
 
 *gupnp-0.13.0 (04 Oct 2009)
 
