--- a/dev-perl/Mail-DKIM/ChangeLog
+++ b/dev-perl/Mail-DKIM/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Mail-DKIM
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DKIM/ChangeLog,v 1.35 2009/10/07 23:06:05 tcunha Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DKIM/ChangeLog,v 1.36 2009/10/18 16:05:31 klausman Exp $
+
+  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> Mail-DKIM-0.36.ebuild:
+  Stable on alpha, bug #283969
 
   07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> Mail-DKIM-0.36.ebuild:
   stable sparc, bug 283969
