--- a/gnome-extra/gnome-media/ChangeLog
+++ b/gnome-extra/gnome-media/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-media
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.202 2009/10/16 23:05:59 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.203 2009/10/18 16:37:18 nixnut Exp $
+
+  18 Oct 2009; nixnut <nixnut@gentoo.org> gnome-media-2.26.0-r1.ebuild:
+  ~ppc'd
 
   16 Oct 2009; Markus Meier <maekke@gentoo.org>
   gnome-media-2.26.0-r1.ebuild:
