--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.101 2009/10/18 14:37:20 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.102 2009/10/18 17:21:35 nixnut Exp $
+
+  18 Oct 2009; nixnut <nixnut@gentoo.org> activesupport-2.2.3.ebuild:
+  ppc stable #283396
 
   18 Oct 2009; Brent Baude <ranger@gentoo.org> activesupport-2.2.3.ebuild:
   Marking activesupport-2.2.3 ppc64 stable for bug 283396
